--- a/styles/global.css
+++ b/styles/global.css
@@ -1,3 +1,11 @@
+* { 
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+ }
+
+
+
 :root { 
   --font-family: 'Poppins', Sans-Serif ; 
   --text: 400 1rem/1.5 var(--font-family);
@@ -15,5 +23,21 @@
 --stroke-default: #D6D3D1;
 --stroke-highlight: #F3541C;   
 
+
+}
+
+body { 
+    overflow: hidden;   /* tira a rolagem da tela*/
+    font: var(--text); /* ja aproveitando para mudar a font de todo o body, ja muda bastante e deixou mais bonito*/
+    color: var(--text-secondary); /* mudando aqui cor da font, conforme variável */
+}
+
+
+h1, h2 { 
+ color: var(--text-primary); /* deixando os h1, h2 do body mais escuro */ 
+}
+
+img {  /* é bom ja deixar universal essa config  */ 
+ max-width: 100%;
 
 }
