--- a/styles/global.css
+++ b/styles/global.css
@@ -23,6 +23,7 @@
 --stroke-default: #D6D3D1;
 --stroke-highlight: #F3541C;   
 
+zoom: 60%;
 
 }
 
@@ -39,5 +40,8 @@ h1, h2 {
 
 img {  /* é bom ja deixar universal essa config  */ 
  max-width: 100%;
-
+height: auto;
 }
+
+
+
