--- a/styles/fields/index.css
+++ b/styles/fields/index.css
@@ -54,3 +54,23 @@ input [type=date]   { /* (input que tenha o tipo "date"  */
 select { 
     background: url(../../Assets/icons/arrow-down-01.svg) no-repeat calc(100% -1rem);
 }
+
+.address .flex {  /* (quando tiver flex, ele aplica esse gap) */
+     gap: 1.25rem; 
+}
+
+.input-wrapper:has([disabled]) { /* todo input wapper que tenha la dentro um disabled*/
+    opacity: .5;
+    
+} 
+
+input {
+ &[disabled] { 
+    background-color: var(--surface-disabled);
+    border: 1px solid var(--stroke-default); 
+    color: var(--text-primary);
+ }
+
+ 
+
+}
