--- a/styles/fields/input.css
+++ b/styles/fields/input.css
@@ -74,7 +74,7 @@ input {
 
  &:invalid { 
 
-    border: 0.125rem solid var(--semantic-error);
+    border: 0.125rem solid var(--semantic-error); /* */ 
  }
  
 & + small  { 
